--- a/index.html
+++ b/index.html
@@ -18,7 +18,134 @@
         </ul>
     </div> 
     <h1 id="first-id">Your Corporate Slaughter House</h1>
-    
+    <div class="mygrid">
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+        <div class="black"></div>
+        <div class="white"></div>
+    </div>
+       <hr>
+    <div class="car" >
+        <div class="blacki">History</div>
+        <div class="whitii">Mathematics</div>
+        <div class="blacki">Geograhpy</div>
+        <div class="whitii">English Language</div>
+        <div class="whitii">Biology</div>
+        <div class="blacki">Chemistry</div>
+        <div class="whitii">Physics</div>
+        <div class="blacki"></div> 
+        <div class="blacki"></div>
+        <div class="whitii"></div>
+        <div class="blacki"></div>
+        <div class="whitii"></div>
+        <div class="whitii"></div>
+        <div class="blacki"></div>
+        <div class="whitii"></div>
+        <div class="blacki"></div>
+    </div>
+    <hr>
+    <div class="size">
+        <div class="whitey"> 
+            <p>Mathematics</p>
+        </div>
+        <div class="blacky">Geograhpy</div>
+        <div class="blacky"> <p>
+            English Language is the language of the anglo-saxons
+        </p>
+        </div>
+        <div class="whitey">Biology</div>
+    </div>
+    <hr>
+    <div class="Before-before">
+        <div class="sting">Spring</div>
+        <div class="stinge">Splint</div>
+        <div class="sting">Spleen</div>
+        <div>Spirited</div>
+        <div>Spring</div>
+        <div>Splint</div>
+        <div>Spleen</div>
+        <div>Spirited</div>
+    </div>
+    <hr>
+
+    <div class="sizing">
+        <div>This is just sizing of grids</div>
+        <div>This is just sizing of grids</div>
+        <div>This is just sizing of grids</div>
+        <div>This is just sizing of grids</div>
+        <div>This is just sizing of grids</div>
+        <div>This is just sizing of grids</div>
+        <div>This is just sizing of grids</div>
+        <div>This is just sizing of grids</div>
+        <div>This is just sizing of grids</div>
+        <div>This is just sizing of grids</div>
+    </div>
+    <hr>
+    <div class="clown" >
+        <div class="item cowboy">🤠</div>
+        <div class="item astronaut">👨‍🚀</div>
+        <div class="item book">📖</div>
+    </div>
     <footer>We <span>Slaughter animals</span> Professionally Hygenically  <span> in a Jiffy.</span> </footer>
      <span id="my-foot">&copy; D' Bucheri 2024</span>
 </body>
